fix: broken on chromium-based browsers

--- a/css/style-unminified.css
+++ b/css/style-unminified.css
@@ -118,7 +118,7 @@ table.centered {
 
 th,
 td {
-    padding: 1rem 1rem 1rem 1rem;
+    padding: 1rem;
 }
 
 button {
@@ -152,8 +152,6 @@ ul.no-bullets {
     list-style-type: none;
     font-family: monospace;
 }
-
-@charset "UTF-8";
 
 .CodeMirror-gutter-filler,
 .CodeMirror-scrollbar-filler {
